# cmake-version4git

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmake-version4git-config.cmake.in  cmake-version4git.cmake
contrib/yocto/: cmake-version4git_git.bb
debian/: changelog  control
