CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(cmake-version4git NONE)

INCLUDE(CMakePackageConfigHelpers)
INCLUDE(GNUInstallDirs)
INCLUDE(cmake/cmake-version4git.cmake)

PROJECT_VERSION_FROM_GIT()

SET(PROJECT_CONFIG_PREFIX
	"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config")

WRITE_BASIC_PACKAGE_VERSION_FILE("${PROJECT_CONFIG_PREFIX}-version.cmake"
VERSION
	${PROJECT_VERSION}
COMPATIBILITY
	SameMajorVersion)

INSTALL(FILES
	"${PROJECT_CONFIG_PREFIX}-version.cmake"
	"${PROJECT_CONFIG_PREFIX}.cmake"
DESTINATION
	"${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}-${PROJECT_VERSION}"
COMPONENT
	Devel)

FILE(READ "cmake/cmake-version4git.cmake" CMAKE_VERSION4GIT)

CONFIGURE_PACKAGE_CONFIG_FILE("cmake/${PROJECT_NAME}-config.cmake.in"
	"${PROJECT_CONFIG_PREFIX}.cmake"
INSTALL_DESTINATION
	"${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}-${PROJECT_VERSION}")
