CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(cmake-version4git NONE)

INCLUDE(CMakePackageConfigHelpers)
INCLUDE(GNUInstallDirs)
INCLUDE(cmake/cmake-version4git.cmake)

PROJECT_VERSION_FROM_GIT()

SET(PROJECT_CONFIG_PREFIX
	"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config")
SET(PROJECT_CMAKE_INSTALL_LIBDIR
	"${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}-${PROJECT_VERSION}")

WRITE_BASIC_PACKAGE_VERSION_FILE("${PROJECT_CONFIG_PREFIX}-version.cmake"
VERSION
	${PROJECT_VERSION}
COMPATIBILITY
	SameMajorVersion)

INSTALL(FILES
	"${PROJECT_CONFIG_PREFIX}-version.cmake"
	"${PROJECT_CONFIG_PREFIX}.cmake"
	"cmake/cmake-version4git.cmake"
DESTINATION
	"${PROJECT_CMAKE_INSTALL_LIBDIR}"
COMPONENT
	Devel)

CONFIGURE_PACKAGE_CONFIG_FILE("cmake/${PROJECT_NAME}-config.cmake.in"
	"${PROJECT_CONFIG_PREFIX}.cmake"
INSTALL_DESTINATION
	"${PROJECT_CMAKE_INSTALL_LIBDIR}"
PATH_VARS
	PROJECT_CMAKE_INSTALL_LIBDIR)
